every component now has a root element with its name as id

--- a/src/assets/styles/ganttlab.scss
+++ b/src/assets/styles/ganttlab.scss
@@ -1,4 +1,4 @@
 @import "ganttlab/variables";
 @import "ganttlab/app";
-@import "ganttlab/selector";
+@import "ganttlab/mainFilter";
 @import "ganttlab/gantt";
