removing all created taskTooltips to avoid useless scrolling

--- a/src/assets/styles/ganttlab/gantt.scss
+++ b/src/assets/styles/ganttlab/gantt.scss
@@ -20,17 +20,17 @@
   fill: #c9302c;
 }
 
-.tooltip_has_data {
-  /* color of symbol in tooltip if there is data */
+.taskTooltip_has_data {
+  /* color of symbol in taskTooltip if there is data */
   color: #449d44;
 }
 
-.tooltip_has_no_data {
-  /* color of symbol in tooltip if there is no data */
+.taskTooltip_has_no_data {
+  /* color of symbol in taskTooltip if there is no data */
   color: #c9302c;
 }
 
-div.tooltip {
+div.taskTooltip {
   font-family: $main-font;
   position: absolute;
   text-align: left;
