welcome to the GitLab provider!

--- a/src/assets/styles/ganttlab.scss
+++ b/src/assets/styles/ganttlab.scss
@@ -1,4 +1,4 @@
 @import "ganttlab/variables";
 @import "ganttlab/app";
-@import "ganttlab/mainFilter";
+@import "ganttlab/providers";
 @import "ganttlab/gantt";
