--- a/src/assets/styles/ganttlab/providers.scss
+++ b/src/assets/styles/ganttlab/providers.scss
@@ -73,3 +73,14 @@
   font-weight: bold;
   font-size: 1.5em;
 }
+.alert {
+  padding: 15px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+.alert-danger {
+  color: #a94442;
+  background-color: #f2dede;
+  border-color: #ebccd1;
+}
